--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+logging.file = log/application.log
+
 spring.datasource.url=jdbc:mysql://soccer.dev/soccermanager
 spring.datasource.username=root
 spring.datasource.password=
