--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://soccer.dev/soccermanager
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
